--- a/fxbase-spring-boot/src/main/resources/fxml/Test.fxml
+++ b/fxbase-spring-boot/src/main/resources/fxml/Test.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 
@@ -9,6 +10,7 @@
       <AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
          <children>
             <Button fx:id="mButton" layoutX="37.0" layoutY="94.0" mnemonicParsing="false" onAction="#show" text="Test" />
+            <Label layoutX="23.0" layoutY="50.0" text="Testowy kontroler" />
          </children>
       </AnchorPane>
    </center>
